# veeru-com-homepage

./: .gitattributes  CNAME  LICENSE  README.md  build.sh  index.html  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: build.yml
posts/services/Tutions/: a1stem.md  service.md
posts/services/catering/: example1.md  example2.md  example3.md  manjula.md  service.md
posts/services/events/: rajan.md  service.md
posts/services/finance/: madhu.md  service.md
posts/services/home-improvement/: ace.md  art.md  service.md
posts/services/movers/: david.md  food1.md  jv.md  manjula.md  service.md
posts/services/real-estate/: service.md
posts/services/tutoring/: a1stem.md  service.md
src/: build.py  index.css  optimize-images.sh
src/templates/: contact.html  index.html  layout.html
src/templates/components/: fieldset.html
src/templates/posts/services/: list.html  page.html
